# outtake

./: .env.example  .gitignore  CLAUDE.md  README.md  SYSTEM_PROMPT.md  docker-compose.yml  mcp-config.json  opencode.json  package-lock.json  package.json  remotion.config.ts  subtitle-job-contract.md  subtitle-pipeline.mjs  transcribe-job-contract.md  transcribe-pipeline.mjs  tsconfig.json
.cursor/: mcp.json
services/core-runtime/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  docs.md  pyproject.toml  requirements.txt
services/core-runtime/.tmp_storage_test/: project.outtake
services/core-runtime/core/: docs.md  engine.py
services/core-runtime/core/domain/: __init__.py  assets.py  capabilities.py  docs.md  entities.py  file_versions.py  resolver_protocol.py  state.py  time.py
services/core-runtime/core/history/: __init__.py  checkpoints.py  docs.md  inverse_builder.py  log.py  undo_redo.py
services/core-runtime/core/ops/: __init__.py  applier.py  base.py  builtin_timeline_ops.py  docs.md  mcp_tool_op.py  registry.py  validator.py
services/core-runtime/core/serialization/: __init__.py  docs.md  migrations.py  serializer.py
services/core-runtime/core/storage/: __init__.py  cas.py  docs.md  project_store.py
services/core-runtime/events/: __init__.py  bus.py  docs.md
services/core-runtime/plugins/: README.md  __init__.py  docs.md
services/core-runtime/plugins/example_plugin/: __init__.py  my_custom_op.py
services/core-runtime/schemas/: docs.md  edit_graph.schema.json  operation.schema.json
services/core-runtime/tests/: docs.md
(+122 files in other folders)
